@@ -1,20 +1,21 @@
-21 Laercio 123 6
-66 Sam 123 8
-26 Bernardo 123 12
-66 Pedro 123 67
-34 Mateus 123 11
-21 Luiz 123 11
-10 Fernando 123 2
-8 Paulo 123 7
-24 Julia 123 9
-15 MariaVitoria 123 18
-31 AnaLeticia 123 38
-26 Bruna 123 27
-9 Marcela 123 18
-8 Isabela 123 21
-12 Hector 123 43
-29 Gabriel 123 22
-3 Carla 123 6
-5 MariaClara 123 9
-2 Rafael 123 5
-10 Bianca 123 9
+21 Laercio 123 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+66 Sam 123 8 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+26 Bernardo 123 12 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+66 Pedro 123 67 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+34 Mateus 123 11 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+21 Luiz 123 11 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+10 Fernando 123 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+8 Paulo 123 7 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+24 Julia 123 9 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+15 MariaVitoria 123 18 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+31 AnaLeticia 123 38 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+26 Bruna 123 27 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+9 Marcela 123 18 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+8 Isabela 123 21 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+12 Hector 123 43 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+29 Gabriel 123 22 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+3 Carla 123 6 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+5 MariaClara 123 9 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+2 Rafael 123 5 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+10 Bianca 123 9 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 
+0 Fernanda 123 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
