@@ -1,0 +1,3 @@
+0 user pass 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+0 exists 123 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+0 new pass 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
